added gulp-webp-html-nosvg for img and gulp-version-number for clean cash browser

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
     @@include('html/head.html',{'title':'Головна'})
     <body>
         @@include('html/header.html',{})
-        <main></main>
+        <main>
+            <img src="@img/qanew.png" alt="">
+        </main>
         @@include('html/footer.html',{})
+        <script src="js/app.min.js"></script>
     </body>
 </html>
