added server.js and update pages of change

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <body>
         @@include('html/header.html',{})
         <main>
-            <img src="@img/qanew.png" alt="">
+            Привіт!
         </main>
         @@include('html/footer.html',{})
         <script src="js/app.min.js"></script>
