--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <body>
         @@include('html/header.html',{})
         <main>
-           <p>маін Привіт1!</p> 
+           <span>маін Привіт1!</span> 
         </main>
         @@include('html/footer.html',{})
         <script src="js/app.min.js"></script>
